Code et libraries fix pour java8 au lieu de java21